[project]
name = "koala"
version = "0.2.0"
description = "Koala — wideband spectral + polarimetric CLEAN with VROOM-SBI minor cycle"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.0",
    "matplotlib>=3.7",
    "casatools>=6.7",
    "casatasks>=6.7",
    # vroom-sbi must be installed separately:
    #   pip install -e /path/to/vroom-sbi
]

[project.scripts]
koala = "koala.cli:main"

[build-system]
requires      = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
